Updated code related with announcement detail and dashboard